for the api controller I used a resource
